change: overhaul of new data structure focus on signals
